# gabriel-v3

./: .gitignore  Cargo.toml  README.md
src/: api.rs  main.rs  persistence.rs  util.rs
web/: package-lock.json  package.json
web/public/: index.html
web/scripts/: captureChart.js
web/src/: App.css  App.tsx  BlockStream.css
web/src/api/: types.ts
web/src/components/: BlockStream.tsx  BlockVisualizer.tsx  BlocksGraph.tsx  P2PKBlocksGraph.tsx
web/src/config/: api.ts
